--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 
     <div class="game-board">
-        <img src="Image/clouds.png" class="clouds">
-        <img src="Image/mario.gif" class="mario">
-        <img src="Image/pipe.png" class="pipe">
+        <img src="clouds.png" class="clouds">
+        <img src="mario.gif" class="mario">
+        <img src="pipe.png" class="pipe">
     </div>
     <script src="script.js"></script>
 </body>
